--- a/index.html
+++ b/index.html
@@ -8,13 +8,49 @@
   <title>We are GOOD ENOUGH LLC</title>
 </head>
 
-<body class="">
-  <div class="content">
-    <h1 class="home">We are GOOD ENOUGH LLC</h1>
+<body>
+  <div>
 
     <p>
-      Hi.
+      Hi, we are <strong>GOOD ENOUGH LLC</strong>.<br />
+      We are <a href="https://mrshawnliu.com">Shawn</a> and <a href="https://bjhess.com">Barry</a>.<br />
+      We hope you are well.
     </p>
+
+    <p>
+      Welcome to our Internet homepage.<br />
+      Here is where you'll find<br />
+      &nbsp;&nbsp;&nbsp;That we are everywhere else.
+    </p>
+
+    <p>
+      We hope that is okay.<br />
+      We hope our absence<br />
+      &nbsp;&nbsp;&nbsp;Makes you fonder.
+    </p>
+
+    <p>
+      We hope you <a href="https://doevery.day">doevery.day</a>.
+    </p>
+
+    <p>
+      We imagine a world<br />
+      &nbsp;&nbsp;&nbsp;Where you have the faintest interest<br />
+      &nbsp;&nbsp;&nbsp;In <a href="https://goodenoughnews.substack.com">A Good Enough Newsletter</a>.
+    </p>
+
+    <p>
+      We apply our &copy;<br />
+      &nbsp;&nbsp;&nbsp;To this basic page<br />
+      &nbsp;&nbsp;&nbsp;Published in 2022.
+    </p>
+
+    <p>
+      Please <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%67%6f%6f%64%65%6e%6f%75%67%68@%73%65%6e%74.%61%73">
+        stay in touch</a>.<br />
+      You're welcome.
+    </p>
+
   </div>
 </body>
 
