--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <p>
       Hi, we are <strong>GOOD ENOUGH LLC</strong>.<br />
-      We are <a href="https://mrshawnliu.com">Shawn</a> and <a href="https://bjhess.com">Barry</a>.<br />
+      That's <a href="https://mrshawnliu.com">Shawn</a> and <a href="https://bjhess.com">Barry</a>.<br />
       We hope you are well.
     </p>
 
