Words stolen from Patrick.

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width">
-  <title>We are GOOD ENOUGH LLC</title>
+  <title>We are GOOD ENOUGH (LLC)</title>
 </head>
 
 <body>
   <div>
 
     <p>
-      Hi, we are <strong>GOOD ENOUGH LLC</strong>.<br />
-      That's <a href="https://mrshawnliu.com">Shawn</a> and <a href="https://bjhess.com">Barry</a>.<br />
+      <a href="https://mrshawnliu.com">Shawn</a> and <a href="https://bjhess.com">Barry</a> are good enough (LLC).<br />
+      You’re good enough, too.<br />
       We hope you are well.
     </p>
 
