--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width">
-  <title>We are GOOD ENOUGH (LLC)</title>
+  <title>We are good enough.</title>
+  <link rel="stylesheet" href="enough.css">
 </head>
 
 <body>
-  <div>
-
+  <main>
     <p>
       <a href="https://mrshawnliu.com">Shawn</a> and <a href="https://bjhess.com">Barry</a> are good enough (LLC).<br />
       You’re good enough, too.<br />
@@ -51,7 +51,11 @@
       You're welcome.
     </p>
 
-  </div>
+    <p>
+      <span class="symbol">&#9996;</span>
+    </p>
+
+  </main>
 </body>
 
 </html>
