Some more words.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </p>
 
     <p>
-      We apply our &copy;<br />
+      We apply our &copy; Good Enough LLC<br />
       &nbsp;&nbsp;&nbsp;To this basic page<br />
       &nbsp;&nbsp;&nbsp;Published in 2022.
     </p>
